--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 AUTH0_DOMAIN=dev-hvpdkc2ulh3du54f.us.auth0.com
 AUTH0_CLIENT_ID=U8a5c6uaXOHhuZc6DxcHwGX65Due1SWb
-REACT_APP_BACKEND_URL=
+REACT_APP_BACKEND_URL=http://192.168.50.205:3000/game
